--- a/core/data_xchange/CMakeLists.txt
+++ b/core/data_xchange/CMakeLists.txt
@@ -5,7 +5,16 @@ set(CMAKE_CXX_STANDARD 14)
 set(TARGET_LOGGER spdlog)
 include_directories(.)
 include_directories(Thirdparty/spdlog/include)
+set(BOOST_INCLUDE_LIBRARIES thread filesystem system program_options)
+set(BOOST_ENABLE_CMAKE ON)
 
+include(FetchContent)
+FetchContent_Declare(
+        Boost
+        GIT_REPOSITORY https://github.com/boostorg/boost.git
+        GIT_TAG boost-1.80.0
+)
+FetchContent_MakeAvailable(Boost)
 
 
 find_package(Protobuf REQUIRED)
@@ -14,5 +23,5 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS messages/pub_sub_messages.proto)
 
 add_executable(data_xchange
-        main.cpp ${PROTO_SRCS} ${PROTO_HDRS} UserApplication/UserApplication.cpp UserApplication/UserApplication.h Publishers/Publishers.cpp Publishers/Publishers.h Subscribers/Subscribers.cpp Subscribers/Subscribers.h Publishers/Publisher.cpp Publishers/Publisher.h Subscribers/Subcriber.cpp Subscribers/Subcriber.h Messenger/Messenger.cpp Messenger/Messenger.h)
-target_link_libraries(data_xchange ${Protobuf_LIBRARIES})
+        main.cpp ${PROTO_SRCS} ${PROTO_HDRS} UserApplication/UserApplication.cpp UserApplication/UserApplication.h Publishers/Publishers.cpp Publishers/Publishers.h Subscribers/Subscribers.cpp Subscribers/Subscribers.h Publishers/Publisher.cpp Publishers/Publisher.h Subscribers/Subscriber.cpp Subscribers/Subscriber.h Messenger/Messenger.cpp Messenger/Messenger.h Topic/Topic.cpp Topic/Topic.h Server/Server.cpp Server/Server.h Server/Request/Request.cpp Server/Request/Request.h)
+target_link_libraries(data_xchange ${Protobuf_LIBRARIES} Boost::tokenizer)
