--- a/core/deployment_engine/demo_app_2/user_config.json
+++ b/core/deployment_engine/demo_app_2/user_config.json
@@ -10,7 +10,7 @@
   "Run_Containerized": "False",
   "Run_Commands": {
     "Mode": "1",
-    "Exec_Commands": ["pip install -r requirements.txt", "python demo_code/server.py"],
+    "Exec_Commands": ["pip3 install -r requirements.txt", "python3 demo_code/server.py"],
     "Wait_For_Exit": "True"
   },
   "Dependencies": "requirements.txt"
