--- a/core/api_server/docker-compose.yml
+++ b/core/api_server/docker-compose.yml
@@ -9,4 +9,5 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ~/postgres_data:/var/lib/postgresql/data
+      - ~/faas_on_iot_workspace/postgres_data:/var/lib/postgresql/data
+      - ./init_db.sql:/docker-entrypoint-initdb.d/create_tables.sql
